# corefx

src/Common/src/Interop/Linux/: Interop.Libraries.cs
src/Common/src/Interop/Linux/System.Net.Ntlm.Native/: Interop.NetNtlmNative.cs  Interop.NtlmType3Message.cs  SecuritySafeHandles.cs
src/Common/src/Interop/Linux/System.Net.Security.Native/: Interop.HeimdalNtlm.cs  Interop.Ntlm.cs  Interop.NtlmBuffer.cs  MockHandles.cs
src/Common/src/Interop/Unix/System.Net.Security.Native/: Interop.Gss.cs  Interop.GssApiException.cs  Interop.GssBuffer.cs  Interop.HeimdalNtlm.cs  Interop.NetSecurityNative.cs  Interop.Ntlm.cs  MockHandles.cs  NtlmSecuritySafeHandles.cs  SecuritySafeHandles.cs
src/Common/src/Interop/Unix/System.Security.Cryptography.Native/: Interop.EVP.Cipher.cs  Interop.Ssl.cs
src/Common/src/Interop/Unix/libgss/: Interop.GssApi.cs  Interop.GssApiException.cs  MockNegotiateStream.cs  MockUtils.cs  Program.cs  SecuritySafeHandles.cs
src/Common/src/Interop/Unix/libheimntlm/: Interop.HeimdalNtlm.cs  Interop.HeimdalNtlmException.cs  Interop.Ntlm.cs  SecuritySafeHandles.cs
src/Common/src/Interop/Unix/libssl/: SecuritySafeHandles.cs
src/Common/src/Microsoft/Win32/SafeHandles/: GssSafeHandles.cs  NtlmSecuritySafeHandles.cs
src/Common/src/System/Net/Security/Unix/: SafeFreeCertContext.cs  SafeFreeCredentials.cs  SafeFreeSslHandles.cs
src/Common/src/System/Net/Unix/: SafeFreeCredentials.cs
src/Native/: CMakeLists.txt  configure.cmake
src/Native/System.Net.Ntlm.Native/: CMakeLists.txt  pal_ntlmapi.cpp  pal_ntlmapi.h
src/Native/System.Net.Security.Native/: CMakeLists.txt  NtlmTest.cpp  pal_evp_cipher.cpp  pal_evp_cipher.h  pal_gssapi.cpp  pal_gssapi.h  pal_ntlm_utils.cpp  pal_ntlm_utils.h  pal_ntlmapi.cpp  pal_ntlmapi.h
src/Native/System.Security.Cryptography.Native/: pal_evp_cipher.cpp  pal_evp_cipher.h
src/Native/pkg/runtime.native.System.Net.Security/debian/: runtime.native.System.Net.Security.pkgproj
src/System.Net.Security/: build-linux.sh  build.sh
src/System.Net.Security/src/: MockUtils.cs  Program.cs  System.Net.Security.csproj
src/System.Net.Security/src/Resources/: Strings.resx
src/System.Net.Security/src/System/Net/: CertificateValidationPal.Unix.cs  ContextFlagsAdapterPal.Unix.cs  ContextFlagsAdapterPal.Windows.cs  NTAuthentication.cs  NegotiateStreamPal.Linux.cs  NegotiateStreamPal.Unix.cs  NegotiateStreamPal.Windows.cs  SecurityStatusAdapterPal.Windows.cs  SslStreamPal.Unix.cs  SslStreamPal.Windows.cs  StreamFramer.cs
src/System.Net.Security/src/System/Net/SecureProtocols/: NegoState.cs  NegotiateStream.cs
src/System.Net.Security/src/unix/: project.json
src/System.Net.Security/src/win/: project.json
src/System.Net.Security/tests/FunctionalTests/: KerberosTest.cs  System.Net.Security.Tests.csproj  TestConfiguration.cs  UnixGssFakeNegotiateStream.cs  UnixGssFakeStreamFramer.cs
src/System.Net.Security/tests/FunctionalTests/unix/: project.json
src/System.Net.Security/tests/Scripts/: mac-setup.sh  setup-kdc.sh
